--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@builder.io/partytown": "^0.7.0",
     "@fontsource/fira-mono": "^4.5.0",
     "@hotwired/turbo": "^7.1.0",
     "@sveltejs/adapter-netlify": "1.0.0-next.78"
