--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@builder.io/partytown": "^0.7.0",
     "@fontsource/fira-mono": "^4.5.0",
     "@hotwired/turbo": "^7.1.0",
-    "@sveltejs/adapter-netlify": "1.0.0-next.78"
+    "@sveltejs/adapter-netlify": "1.0.0-next.78",
+    "gotrue-js": "^0.9.29"
   }
 }
